--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     width: 600px;
     margin: 24px;
-    
+    background-color: grey;
 }
 
 h1 {
